Fix z-index on match sort handle

--- a/public/less/backend.less
+++ b/public/less/backend.less
@@ -1607,6 +1607,7 @@ select.form-style {
 }
 .front {
 	z-index: 1;
+	position: relative;
 }
 .element-container {
 	margin: 0;
